fix: house images are not aligned with the house's details

--- a/css/styles.css
+++ b/css/styles.css
@@ -75,12 +75,16 @@ article {
 	margin-top: 10px;
 	border: 1px solid grey;
 	border-radius: 5%;
-
 }
 
 article div{
 	display:inline-block;
 	width: 50%;
+	vertical-align: top;
+}
+
+article img { 
+    text-align:center;
 }
 
 article p {
